--- a/css/main.css
+++ b/css/main.css
@@ -234,9 +234,7 @@ a:hover {
   cursor: pointer;
 }
 .more {
-  width: 45%;
-  background-color: #28241f;
-  color: #fff;
+  color: #28241f;
   font-family: Philosopher;
   font-size: 32px;
   margin-top: 4%;
@@ -453,7 +451,7 @@ footer {
   margin-bottom: 0px;
 }
 .onecard {
-  margin-top: 30px;
+  margin: 1%;
   padding: 20px;
   width: 310px;
   display: flex;
@@ -487,7 +485,6 @@ h4 {
   display: flex;
   flex-wrap: wrap;
   width: 95%;
-  justify-content: space-between;
 }
 
 .menu_num2 {
@@ -529,7 +526,7 @@ h4 {
   margin-left: 7%;
 }
 label {
-  color: #fff;
+  color: #28241f;
 }
 .update {
   display: flex;
@@ -545,10 +542,13 @@ label {
   background-color: #28241f;
   color: white;
   padding: 1% 5%;
-  margin-left: 43%;
   border: none;
   border-radius: 5px;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
 }
 .sort_buttons {
   margin-top: 10px;
@@ -680,7 +680,6 @@ label {
 }
 #search-results {
   display: flex;
-  justify-content: space-around;
   flex-wrap: wrap;
   width: 95%;
 }
@@ -739,4 +738,8 @@ label {
   width: 250px;
   margin: 20px 0px;
   border-radius: 10px;
+}
+
+.btn {
+  font-family: Philosopher;
 }
