--- a/css/main.css
+++ b/css/main.css
@@ -172,6 +172,33 @@ p {
   margin-top: 20%;
   margin-left: 30%;
 }
+
+.cart-icon {
+  position: relative;
+  display: inline-block;
+}
+
+.basket-icon {
+  width: 40px;
+  height: auto;
+}
+
+.cart-count {
+  background-color: red;
+  color: white;
+  border-radius: 50%;
+  padding: 5px 8px;
+  font-size: 12px;
+  font-weight: bold;
+  line-height: 1;
+  min-width: 7px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-self: flex-end;
+}
+
 .exit {
   margin-left: 10%;
 }
